<resources>
    <string name="app_name">VersionOneTaskTwo</string>
    <string name="timesheet_entry">Timesheet Entry</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start date</string>
    <string name="save_data">Save data</string>
    <string name="Name">Name</string>
    <string name="camera">Camera</string>
    <string name="capture">Capture</string>
    <string name="adv_camera">Adv Camera</string>
    <string name="choose">choose</string>
    <string name="take_picture">Take Picture</string>
    <string name="upload">Upload</string>
    <string name="view_records">View Records</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="registertwo">Register</string>
    <string name="emailtwo">Email</string>
    <string name="passwordtwo">Password</string>
    <string name="confirm_passwordtwo">Confirm Password</string>
    <string name="minimum">Minimum</string>
    <string name="set_daily_goal_for_hours_worked">Set daily goal for hours worked !!</string>
    <string name="maximum">Maximum</string>
    <string name="graph_features">Graph Features</string>
    <string name="plotgraph">PlotGraph</string>
    <string name="event_name">Event Name</string>
    <string name="save">Save</string>
    <string name="calender">Calender</string>
    <string name="monthly_progress">Monthly Progress</string>
    <string name="eventslist">EventsList</string>
    <string name="showevent">ShowEvent</string>
    <string name="show_event">Show Event</string>
    <string name="event_details">Event Details</string>
    <string name="todo">TODO</string>
    <string name="descriptionone">Description</string>
    <string name="create_your_time_sheet">Create your Time Sheet</string>
    <string name="set_calender_events">Set Calender Events</string>
    <string name="click_on_the_event_date_type_the_name_of_the_event_and_click_save">Click on the event date ,type the name of the event and click save</string>
</resources>